# AQAP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROTOCOL.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
aqa/: __init__.py
aqa/agent/: base.py  judge.py  probe.py  reporter.py  supervisor.py
aqa/core/: config.py  engine.py  log_config.py  message.py  security.py
aqa/plugin/: base.py  registry.py
aqa/plugins/: trace_collector.py
aqa/transport/: base.py  inmemory.py  redis_streams.py
aqap/: __init__.py  __main__.py  admin.py  cli.py  config_hotreload.py
aqap-kernel/: Cargo.toml
aqap-kernel/.cargo/: config.toml
aqap-kernel/src/: crypto.rs  error.rs  lib.rs  router.rs  schema.rs  types.rs  wire.rs
aqap-kernel/src/schemas/: dlq_v3.json  error_v3.json  heartbeat_v3.json  report_v3.json  result_v3.json  task_v3.json  verdict_v3.json
aqap/agent/: __init__.py  base.py  dlq_consumer.py  judge.py  probe.py  reporter.py  scheduler.py  supervisor.py
aqap/core/: __init__.py  config.py  dlq.py  engine.py  log_config.py  message.py  security.py  validate.py
aqap/kernel/: __init__.py
aqap/plugin/: __init__.py  base.py  registry.py
aqap/plugins/: __init__.py  scorer.py  trace_collector.py  validator.py
aqap/transport/: __init__.py  base.py  inmemory.py  kafka_transport.py  rabbitmq_transport.py  redis_streams.py
docs/: AGENT_SYSTEM.md  ARCHITECTURE.md  CONFIG_REFERENCE.md  PLUGIN_SYSTEM.md  TESTING.md  TRANSPORT.md
docs/superpowers/plans/: 2026-07-02-aqap-v3-phase2-python-sdk.md
examples/: coordination_demo.py  demo.py  design_demo.py
sdk/: README.md  pyproject.toml
sdk/aqa_sdk/: message.py
sdk/aqap_sdk/: __init__.py  consumer.py  message.py
sdk/examples/: go_agent.go  js_agent.mjs
sdk/tests/: test_sdk.py
tests/: conftest.py  test_aqa.py  test_crypto.py  test_extended.py  test_kernel_integration.py  test_schema.py  test_wire.py
