[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqap"
version = "1.1.0"
description = "Agent Queue Agent Communication Protocol — 基于消息队列的 Agent 质量保障平台"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "redis>=5.0",
    "cryptography>=40.0",
]

[project.optional-dependencies]
kafka = ["aiokafka>=0.10.0"]
rabbitmq = ["aio-pika>=9.0"]
admin = ["fastapi>=0.100", "uvicorn>=0.23"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "ruff>=0.5"]
all = ["aiokafka>=0.10.0", "aio-pika>=9.0", "fastapi>=0.100", "uvicorn>=0.23"]

[project.urls]
Homepage = "https://github.com/agent-quality-assurance/aqap"

[tool.setuptools.packages.find]
include = ["aqap", "aqap.*", "aqap.plugins.*"]
namespaces = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "sdk/tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require external services)",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
