[package]
name = "aqap-kernel"
version = "0.1.0"
edition = "2024"
description = "AQAP v3 Protocol Kernel — wire format, crypto, schema validation"

[lib]
name = "aqap_kernel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
ring = "0.17"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
zstd = "0.13"
lz4 = "1"
flate2 = "1"                # zlib
rmp-serde = "1"             # MsgPack
jsonschema = "0.18"         # JSON Schema validation
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
