[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqap-sdk"
version = "1.0.0"
description = "Agent Quality Assurance SDK — 外部 Agent 接入 AQAP 系统的消息队列客户端"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]

[project.urls]
Homepage = "https://github.com/agent-quality-assurance/aqap-sdk"
